<resources>
    <string name="app_name">Memento</string>

    <string name="default_username">Пользователь</string>
    <string name="hello">Здравствуйте, </string>
    <string name="info">В среднем человек вашего возраста и привычек доживет до: </string>
    <string name="count">Счетчик не установлен</string>
    <string name="quest">Перейти к анкете</string>
    <string name="track">Закрепить привычку</string>
    <string name="clean">Сброс</string>
    <string name="q_invite">ДЛЯ ЗАПУСКА СЧЕТЧИКА ОТВЕТЬТЕ НА ВОПРОСЫ АНКЕТЫ</string>
    <string name="buttonNext">ДАЛЕЕ</string>
    <string name="buttonBack">НАЗАД</string>
    <string name="textName">Введите Ваше имя</string>
    <string name="editName">Имя</string>
    <string name="textGender">Ваш пол</string>
    <string name="male">Муж</string>
    <string name="female">Жен</string>
    <string name="transgender">Еще не решило</string>
    <string name="textDate">Введите дату Вашего рождения</string>
    <string name="editDate">дд.мм.гггг</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="amnesia">Не помню</string>
    <string name="buttonFinish">ГОТОВО</string>
    <string name="dialog_title_Q">Переход к анкете</string>
    <string name="dialog_message_Q">Показывать предыдущие ответы?</string>
    <string name="dialog_negative">нет</string>
    <string name="dialog_positive">да</string>


</resources>
